--- a/notebooks/ensemble.ipynb
+++ b/notebooks/ensemble.ipynb
@@ -56,7 +56,8 @@
     "BASE_ADV_PATH = Path(MAX_PATH, 'adversarial_data_tensors')\n",
     "BASE_POSTHOC_PATH = Path(MAX_PATH, 'posthoc_tensors')\n",
     "POSTHOC_MODELS_PATH = Path(MAX_PATH, 'posthoc_models')\n",
-    "ENSEMBLE_MODELS_PATH = Path(MAX_PATH, 'ensemble_models')\n",
+    "\n",
+    "LINEAR_CLASSIFIER_MODELS_PATH = Path(MAX_PATH, 'linear_classifier_models')\n",
     "\n",
     "ORI_PATH = Path(DATA_PATH, 'ori')\n",
     "CLASS_SUBSET_PATH = Path(ORI_PATH, 'class_subset.npy')\n",
@@ -196,7 +197,17 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cw\n",
+      "fgsm_06\n",
+      "pgd_03\n"
+     ]
+    }
+   ],
    "source": [
     "# Remember to set the correct transformation\n",
     "# encoder\n",
@@ -207,11 +218,12 @@
     "\n",
     "for k, v in DATA_PATHS.items():\n",
     "    if not k == \"ori\":\n",
+    "        print(k)\n",
     "        adv_train_dataset = EnsembleDataset(v[\"init\"][\"train\"][\"images\"], \n",
     "                                            v[\"init\"][\"train\"][\"label\"])\n",
     "        \n",
     "        adv_val_dataset = EnsembleDataset(v[\"init\"][\"validation\"][\"images\"], \n",
-    "                                            v[\"init\"][\"validation\"][\"label\"])\n",
+    "                                          v[\"init\"][\"validation\"][\"label\"])\n",
     "\n",
     "        loader_dict[k][\"train\"] = DataLoader(adv_train_dataset, \n",
     "                                             batch_size=BATCH_SIZE, \n",
@@ -226,18 +238,18 @@
     "                                             shuffle=False)\n",
     "    else:\n",
     "        clean_train_dataset = ImageDataset(v[\"init\"][\"train\"][\"images\"], \n",
-    "                                  v[\"init\"][\"train\"][\"label\"], \n",
-    "                                  ORIGINAL_TRANSFORM,\n",
-    "                                  CLASS_SUBSET, \n",
-    "                                  index_subset=None, \n",
-    "                                  label_encoder=label_encoder)\n",
+    "                                           v[\"init\"][\"train\"][\"label\"], \n",
+    "                                           ORIGINAL_TRANSFORM,\n",
+    "                                           CLASS_SUBSET, \n",
+    "                                           index_subset=None, \n",
+    "                                           label_encoder=label_encoder)\n",
     "\n",
     "        clean_val_dataset = ImageDataset(v[\"init\"][\"validation\"][\"images\"], \n",
-    "                                  v[\"init\"][\"validation\"][\"label\"],\n",
-    "                                  ORIGINAL_TRANSFORM,\n",
-    "                                  CLASS_SUBSET, \n",
-    "                                  index_subset=None, \n",
-    "                                  label_encoder=label_encoder)\n",
+    "                                         v[\"init\"][\"validation\"][\"label\"],\n",
+    "                                         ORIGINAL_TRANSFORM,\n",
+    "                                         CLASS_SUBSET, \n",
+    "                                         index_subset=None, \n",
+    "                                         label_encoder=label_encoder)\n",
     "        \n",
     "        loader_dict[\"ori\"][\"train\"] = DataLoader(clean_train_dataset, \n",
     "                              batch_size=BATCH_SIZE, \n",
@@ -260,7 +272,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch.utils.data.dataloader.DataLoader at 0x2b9c0c989e50>"
+       "<torch.utils.data.dataloader.DataLoader at 0x2afce16a9250>"
       ]
      },
      "execution_count": 8,
@@ -269,7 +281,7 @@
     }
    ],
    "source": [
-    "loader_dict[\"pgd_03\"][\"train\"]"
+    "loader_dict[\"cw\"][\"train\"]"
    ]
   },
   {
@@ -282,6 +294,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# next(iter(loader_dict[\"pgd_03\"][\"train\"]))"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -290,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,6 +350,34 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "run_attacks = [\n",
+    "            \"ori\", \n",
+    "#             \"cw\", \n",
+    "            \"fgsm_06\", \n",
+    "            \"pgd_03\"\n",
+    "]\n",
+    "attack = \"cw\"\n",
+    "\n",
+    "attack not in run_attacks\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -339,35 +388,24 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#################################################################################################################################\n",
-      "################################################## Training classifier for ori ##################################################\n",
-      "#################################################################################################################################\n",
-      "Epoch: [0]  [  0/126]  eta: 0:08:04  lr: 0.001000  loss: 4.562117 (4.562117)  time: 3.847151  data: 3.301622  max mem: 1723\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "run_attacks = [\n",
+    "            \"ori\", \n",
+    "            \"cw\", \n",
+    "            \"fgsm_06\", \n",
+    "            \"pgd_03\"\n",
+    "]\n",
+    "\n",
     "for attack, loaders in loader_dict.items():\n",
-    "    \n",
+    "    if attack not in run_attacks:\n",
+    "        print(f'''Skipping for {attack}''')\n",
+    "        continue\n",
+    "        \n",
     "    # Initialise classifier\n",
     "    adv_linear_classifier = LinearClassifier(linear_classifier.linear.in_features, \n",
     "                                         num_labels=len(CLASS_SUBSET))\n",
     "    adv_linear_classifier = adv_linear_classifier.cuda()\n",
-    "    \n",
-    "    log_dir = Path(POSTHOC_MODELS_PATH, attack)\n",
-    "    \n",
-    "    to_restore={'epoch':3}\n",
-    "\n",
-    "    utils.restart_from_checkpoint(\n",
-    "        Path(log_dir, \"checkpoint.pth.tar\"),\n",
-    "        run_variables=to_restore,\n",
-    "        state_dict=adv_linear_classifier\n",
-    "    )\n",
     "    \n",
     "    # Metric logger path\n",
     "#     LOG_PATH = Path(LOG_BASE_PATH, 'adv_classifier', version, attack)\n",
@@ -384,7 +422,7 @@
     "                    adv_linear_classifier, \n",
     "                    loaders[\"train\"], \n",
     "                    loaders[\"validation\"], \n",
-    "                    log_dir=Path(ENSEMBLE_MODELS_PATH, version, attack),\n",
+    "                    log_dir=Path(LINEAR_CLASSIFIER_MODELS_PATH, version, attack),\n",
     "                    tensor_dir=None, \n",
     "                    optimizer=None, \n",
     "                    adversarial_attack=None,\n",
@@ -399,7 +437,7 @@
     "                    show_image=False)\n",
     "    \n",
     "    # Save adversarial Classifier\n",
-    "    save_path = Path(ENSEMBLE_MODELS_PATH, version, attack)\n",
+    "    save_path = Path(LINEAR_CLASSIFIER_MODELS_PATH, version, attack)\n",
     "    \n",
     "    if not os.path.isdir(save_path):\n",
     "        os.makedirs(save_path)\n",
@@ -441,16 +479,16 @@
     "                             num_labels=len(CLASS_SUBSET))\n",
     "    adv_classifier.to(DEVICE)\n",
     "    \n",
-    "    save_path = Path(ADVERSARIAL_CLASSIFIER_MODEL_SAVE_PATH, version)\n",
+    "    save_path = Path(TODO, version)\n",
     "    save_file = f\"{attack}.pt\"\n",
-    "    adv_classifier.load_state_dict(torch.load(str(save_path) + \"/\" + save_file))\n",
+    "    adv_classifier.load_state_dict(torch.load(Path(save_path, save_file))\n",
     "    \n",
     "    for applied_attack in attacks:\n",
     "        \n",
     "#         if applied_attack == attack:\n",
     "#             continue\n",
     "        \n",
-    "        print(\"-\"*50 + f\" {applied_attack} dataset \" + \"-\"*50)\n",
+    "        print(\">\"*5 + f\" {applied_attack} dataset \")\n",
     "        logger_dict, logger = validate_network(model, \n",
     "                                               adv_classifier, \n",
     "                                               loader_dict[applied_attack][\"validation\"], \n",
