test eval on ori

--- a/notebooks/ensemble.ipynb
+++ b/notebooks/ensemble.ipynb
@@ -272,7 +272,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch.utils.data.dataloader.DataLoader at 0x2afce16a9250>"
+       "<torch.utils.data.dataloader.DataLoader at 0x2b946ac272b0>"
       ]
      },
      "execution_count": 8,
@@ -350,34 +350,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "run_attacks = [\n",
-    "            \"ori\", \n",
-    "#             \"cw\", \n",
-    "            \"fgsm_06\", \n",
-    "            \"pgd_03\"\n",
-    "]\n",
-    "attack = \"cw\"\n",
-    "\n",
-    "attack not in run_attacks\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -388,13 +360,51 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#################################################################################################################################\n",
+      "################################################## Training classifier for ori ##################################################\n",
+      "#################################################################################################################################\n",
+      "Epoch: [0]  [  0/126]  eta: 0:08:12  lr: 0.001000  loss: 4.562117 (4.562117)  time: 3.907374  data: 3.410567  max mem: 1723\n",
+      "Epoch: [0]  [ 20/126]  eta: 0:06:16  lr: 0.001000  loss: 0.287717 (1.009202)  time: 3.537406  data: 3.031131  max mem: 1725\n",
+      "Epoch: [0]  [ 40/126]  eta: 0:05:06  lr: 0.001000  loss: 0.127130 (0.577551)  time: 3.580346  data: 3.073099  max mem: 1725\n",
+      "Epoch: [0]  [ 60/126]  eta: 0:03:55  lr: 0.001000  loss: 0.120224 (0.431370)  time: 3.568691  data: 3.064073  max mem: 1725\n",
+      "Epoch: [0]  [ 80/126]  eta: 0:02:43  lr: 0.001000  loss: 0.089167 (0.348410)  time: 3.550090  data: 3.046097  max mem: 1725\n",
+      "Epoch: [0]  [100/126]  eta: 0:01:32  lr: 0.001000  loss: 0.094006 (0.299358)  time: 3.529479  data: 3.023664  max mem: 1725\n",
+      "Epoch: [0]  [120/126]  eta: 0:00:21  lr: 0.001000  loss: 0.083479 (0.265608)  time: 3.570855  data: 3.063783  max mem: 1725\n",
+      "Epoch: [0]  [125/126]  eta: 0:00:03  lr: 0.001000  loss: 0.083299 (0.258620)  time: 3.532491  data: 3.031972  max mem: 1725\n",
+      "Epoch: [0] Total time: 0:07:27 (3.553911 s / it)\n",
+      "Averaged stats: lr: 0.001000  loss: 0.083299 (0.258620)\n",
+      "Test:  [0/5]  eta: 0:00:18  loss: 0.101936 (0.101936)  acc1: 95.703125 (95.703125)  acc5: 100.000000 (100.000000)  time: 3.664612  data: 3.168752  max mem: 1725\n",
+      "Test:  [1/5]  eta: 0:00:15  loss: 0.101936 (0.116585)  acc1: 95.703125 (95.898438)  acc5: 99.609375 (99.804688)  time: 3.901068  data: 3.396126  max mem: 1725\n",
+      "Test:  [2/5]  eta: 0:00:11  loss: 0.115332 (0.116167)  acc1: 96.093750 (96.223958)  acc5: 100.000000 (99.869792)  time: 3.958859  data: 3.453350  max mem: 1725\n",
+      "Test:  [3/5]  eta: 0:00:07  loss: 0.109823 (0.114581)  acc1: 95.703125 (96.093750)  acc5: 100.000000 (99.902344)  time: 3.950292  data: 3.442060  max mem: 1725\n",
+      "Test:  [4/5]  eta: 0:00:03  loss: 0.109823 (0.100968)  acc1: 96.093750 (96.480000)  acc5: 100.000000 (99.920000)  time: 3.840405  data: 3.342698  max mem: 1725\n",
+      "Test: Total time: 0:00:19 (3.841068 s / it)\n",
+      "* Acc@1 96.480 Acc@5 99.920 loss 0.101\n",
+      "Accuracy at epoch 0 of the network on the 5 test images: 96.5%\n",
+      "Max accuracy so far: 96.48%\n",
+      "Training of the supervised linear classifier on frozen features completed.\n",
+      "Top-1 test accuracy: 96.5\n",
+      "Finished Training classifier on ori\n",
+      "################################################################################################################################\n",
+      "################################################## Training classifier for cw ##################################################\n",
+      "################################################################################################################################\n",
+      "Epoch: [0]  [  0/126]  eta: 0:32:55  lr: 0.001000  loss: 4.467798 (4.467798)  time: 15.682453  data: 15.169256  max mem: 1725\n",
+      "Epoch: [0]  [ 20/126]  eta: 0:27:52  lr: 0.001000  loss: 0.829293 (1.595452)  time: 15.787837  data: 15.282030  max mem: 1725\n",
+      "Epoch: [0]  [ 40/126]  eta: 0:22:32  lr: 0.001000  loss: 0.437458 (1.029341)  time: 15.669223  data: 15.164578  max mem: 1725\n"
+     ]
+    }
+   ],
    "source": [
     "run_attacks = [\n",
     "            \"ori\", \n",
-    "            \"cw\", \n",
-    "            \"fgsm_06\", \n",
-    "            \"pgd_03\"\n",
+    "            \"cw\",\n",
+    "#             \"fgsm_06\", \n",
+    "#             \"pgd_03\"\n",
     "]\n",
     "\n",
     "for attack, loaders in loader_dict.items():\n",
@@ -471,33 +481,36 @@
     "attacks = [x for x in loader_dict.keys()]\n",
     "\n",
     "for attack in attacks:\n",
-    "    pstr = \"#\"*30 + f''' evaluating adv_classifier trained on {attack} ''' + \"#\"*30\n",
-    "    print(len(pstr)*\"#\")\n",
-    "    print(pstr)\n",
-    "    print(len(pstr)*\"#\")\n",
-    "    adv_classifier = LinearClassifier(linear_classifier.linear.in_features, \n",
-    "                             num_labels=len(CLASS_SUBSET))\n",
-    "    adv_classifier.to(DEVICE)\n",
-    "    \n",
-    "    save_path = Path(TODO, version)\n",
-    "    save_file = f\"{attack}.pt\"\n",
-    "    adv_classifier.load_state_dict(torch.load(Path(save_path, save_file))\n",
-    "    \n",
-    "    for applied_attack in attacks:\n",
-    "        \n",
-    "#         if applied_attack == attack:\n",
-    "#             continue\n",
-    "        \n",
-    "        print(\">\"*5 + f\" {applied_attack} dataset \")\n",
-    "        logger_dict, logger = validate_network(model, \n",
-    "                                               adv_classifier, \n",
-    "                                               loader_dict[applied_attack][\"validation\"], \n",
-    "                                               criterion=nn.CrossEntropyLoss(),\n",
-    "                                               tensor_dir=None, \n",
-    "                                               adversarial_attack=None, \n",
-    "                                               n=4, \n",
-    "                                               avgpool_patchtokens=False, \n",
-    "                                               path_predictions=None)\n"
+    "    if attack == \"ori\":\n",
+    "        pstr = \"#\"*30 + f''' evaluating adv_classifier trained on {attack} ''' + \"#\"*30\n",
+    "        print(len(pstr)*\"#\")\n",
+    "        print(pstr)\n",
+    "        print(len(pstr)*\"#\")\n",
+    "        adv_classifier = LinearClassifier(linear_classifier.linear.in_features, \n",
+    "                                 num_labels=len(CLASS_SUBSET))\n",
+    "        adv_classifier.to(DEVICE)\n",
+    "\n",
+    "        # load from checkpoint\n",
+    "        log_dir = Path(LINEAR_CLASSIFIER_MODELS_PATH, attack)\n",
+    "        to_restore={'epoch': 1}\n",
+    "        utils.restart_from_checkpoint(\n",
+    "            Path(log_dir, \"checkpoint.pth.tar\"),\n",
+    "            run_variables=to_restore,\n",
+    "            state_dict=adv_classifier\n",
+    "        )\n",
+    "\n",
+    "        for applied_attack in attacks:\n",
+    "\n",
+    "            print(\">\"*5 + f\" {applied_attack} dataset \")\n",
+    "            logger_dict, logger = validate_network(model, \n",
+    "                                                   adv_classifier, \n",
+    "                                                   loader_dict[applied_attack][\"validation\"], \n",
+    "                                                   criterion=nn.CrossEntropyLoss(),\n",
+    "                                                   tensor_dir=None, \n",
+    "                                                   adversarial_attack=None, \n",
+    "                                                   n=4, \n",
+    "                                                   avgpool_patchtokens=False, \n",
+    "                                                   path_predictions=None)\n"
    ]
   },
   {
@@ -514,6 +527,7 @@
    "outputs": [],
    "source": [
     "attacks = [x for x in loader_dict.keys()]\n",
+    "\n",
     "for attack in attacks:\n",
     "    \n",
     "    pstr = \"#\"*30 + f''' evaluating adv_classifier trained on {attack} ''' + \"#\"*30\n",
@@ -525,9 +539,13 @@
     "                             num_labels=len(CLASS_SUBSET))\n",
     "    adv_classifier.to(DEVICE)\n",
     "    \n",
-    "    save_path = Path(ADVERSARIAL_CLASSIFIER_MODEL_SAVE_PATH, version)\n",
-    "    save_file = f\"{attack}.pt\"\n",
-    "    adv_classifier.load_state_dict(torch.load(str(save_path) + \"/\" + save_file))\n",
+    "    log_dir = Path(LINEAR_CLASSIFIER_MODELS_PATH, attack)\n",
+    "    to_restore={'epoch': 1}\n",
+    "    utils.restart_from_checkpoint(\n",
+    "        Path(log_dir, \"checkpoint.pth.tar\"),\n",
+    "        run_variables=to_restore,\n",
+    "        state_dict=adv_classifier\n",
+    "    )\n",
     "    \n",
     "    vits = ViTWrapper(model, adv_classifier, transform=None)\n",
     "\n",
@@ -541,12 +559,11 @@
     "            ev_attack = FGSM(vits, eps=0.03)\n",
     "        else:\n",
     "            continue\n",
-    "        \n",
-    "        model.train()\n",
+    " \n",
     "        print(\">\"*5 + f''' applying attack: {ev_attack} ''')\n",
     "        logger_dict, logger = validate_network(model, \n",
     "                                               adv_classifier, \n",
-    "                                               loader_dict[\"clean\"][\"validation\"],\n",
+    "                                               loader_dict[\"ori\"][\"validation\"],\n",
     "                                               criterion=nn.CrossEntropyLoss(),\n",
     "                                               tensor_dir=None, \n",
     "                                               adversarial_attack=ev_attack,\n",
@@ -573,7 +590,14 @@
     "clean_classifier = LinearClassifier(linear_classifier.linear.in_features, \n",
     "                                    num_labels=len(CLASS_SUBSET))\n",
     "clean_classifier.to(DEVICE)\n",
-    "clean_classifier.load_state_dict(torch.load(f\"/cluster/scratch/mmathys/dl_data/adversarial_data/adv_classifiers/{version}/{name}.pt\"))"
+    "\n",
+    "log_dir = Path(LINEAR_CLASSIFIER_MODELS_PATH, \"ori\")\n",
+    "to_restore={'epoch': 1}\n",
+    "utils.restart_from_checkpoint(\n",
+    "    Path(log_dir, \"checkpoint.pth.tar\"),\n",
+    "    run_variables=to_restore,\n",
+    "    state_dict=clean_classifier\n",
+    ")"
    ]
   },
   {
@@ -583,21 +607,37 @@
    "outputs": [],
    "source": [
     "# Load posthoc\n",
-    "posthocs=[\"cw\", \"fgsm_06\", \"pgd_06\"]\n",
+    "posthocs=[\"cw\", \"fgsm_06\", \"pgd_03\"]\n",
     "\n",
-    "adv_models = [\"cw\", \"fgsm\", \"pgd\"]\n",
+    "adv_models = [\"cw\", \"fgsm_06\", \"pgd_03\"]\n",
     "\n",
     "# Perform validation on clean dataset\n",
     "for post_model in posthocs:\n",
+    "    \n",
+    "    log_dir = Path(POSTHOC_MODELS_PATH, post_model)\n",
+    "    \n",
     "    posthoc = LinearBC(1536)\n",
-    "    posthoc.to(DEVICE)\n",
-    "    posthoc.load_state_dict(torch.load(f'''/cluster/scratch/mmathys/dl_data/posthoc-models/{post_model}.pt'''))\n",
+    "    posthoc.cuda()\n",
+    "    to_restore={'epoch':3}\n",
+    "    utils.restart_from_checkpoint(\n",
+    "        Path(log_dir, \"checkpoint.pth.tar\"),\n",
+    "        run_variables=to_restore,\n",
+    "        state_dict=posthoc\n",
+    "    )\n",
     "    \n",
     "    for adv_model in adv_models:\n",
     "        adv_classifier = LinearClassifier(linear_classifier.linear.in_features, \n",
     "                                          num_labels=len(CLASS_SUBSET))\n",
     "        adv_classifier.to(DEVICE)\n",
-    "        adv_classifier.load_state_dict(torch.load(f'''/cluster/scratch/mmathys/dl_data/adversarial_data/adv_classifiers/{version}/{adv_model}.pt'''))\n",
+    "        \n",
+    "        log_dir = Path(LINEAR_CLASSIFIER_MODELS_PATH, \"adv_model\")\n",
+    "        to_restore={'epoch': 1}\n",
+    "        \n",
+    "        utils.restart_from_checkpoint(\n",
+    "            Path(log_dir, \"checkpoint.pth.tar\"),\n",
+    "            run_variables=to_restore,\n",
+    "            state_dict=adv_classifier\n",
+    "        )\n",
     "        \n",
     "        for attack, loaders in loader_dict.items():\n",
     "            pstr = \"#\"*30 + f''' Validating Posthoc: {post_model} and adv_classifier: {adv_model} on {attack} ''' + \"#\"*30\n",
