--- a/notebooks/ensemble.ipynb
+++ b/notebooks/ensemble.ipynb
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -395,7 +395,28 @@
       "################################################################################################################################\n",
       "Epoch: [0]  [  0/126]  eta: 0:32:55  lr: 0.001000  loss: 4.467798 (4.467798)  time: 15.682453  data: 15.169256  max mem: 1725\n",
       "Epoch: [0]  [ 20/126]  eta: 0:27:52  lr: 0.001000  loss: 0.829293 (1.595452)  time: 15.787837  data: 15.282030  max mem: 1725\n",
-      "Epoch: [0]  [ 40/126]  eta: 0:22:32  lr: 0.001000  loss: 0.437458 (1.029341)  time: 15.669223  data: 15.164578  max mem: 1725\n"
+      "Epoch: [0]  [ 40/126]  eta: 0:22:32  lr: 0.001000  loss: 0.437458 (1.029341)  time: 15.669223  data: 15.164578  max mem: 1725\n",
+      "Epoch: [0]  [ 60/126]  eta: 0:17:23  lr: 0.001000  loss: 0.359102 (0.812719)  time: 15.973701  data: 15.470289  max mem: 1725\n",
+      "Epoch: [0]  [ 80/126]  eta: 0:12:01  lr: 0.001000  loss: 0.307235 (0.689295)  time: 15.275537  data: 14.768333  max mem: 1725\n",
+      "Epoch: [0]  [100/126]  eta: 0:06:43  lr: 0.001000  loss: 0.292956 (0.612036)  time: 14.882878  data: 14.375455  max mem: 1725\n",
+      "Epoch: [0]  [120/126]  eta: 0:01:32  lr: 0.001000  loss: 0.284346 (0.558872)  time: 14.752380  data: 14.247301  max mem: 1725\n",
+      "Epoch: [0]  [125/126]  eta: 0:00:15  lr: 0.001000  loss: 0.266769 (0.546774)  time: 14.526029  data: 14.026741  max mem: 1725\n",
+      "Epoch: [0] Total time: 0:32:11 (15.329673 s / it)\n",
+      "Averaged stats: lr: 0.001000  loss: 0.266769 (0.546774)\n",
+      "Test:  [0/5]  eta: 0:01:11  loss: 0.270694 (0.270694)  acc1: 92.578125 (92.578125)  acc5: 99.218750 (99.218750)  time: 14.314344  data: 13.798774  max mem: 1725\n",
+      "Test:  [1/5]  eta: 0:00:56  loss: 0.270694 (0.276679)  acc1: 90.234375 (91.406250)  acc5: 98.828125 (99.023438)  time: 14.191493  data: 13.676767  max mem: 1725\n",
+      "Test:  [2/5]  eta: 0:00:42  loss: 0.270694 (0.259260)  acc1: 91.796875 (91.536458)  acc5: 99.218750 (99.348958)  time: 14.198419  data: 13.683290  max mem: 1725\n",
+      "Test:  [3/5]  eta: 0:00:28  loss: 0.262526 (0.260077)  acc1: 90.234375 (91.113281)  acc5: 99.218750 (99.316406)  time: 14.163267  data: 13.648511  max mem: 1725\n",
+      "Test:  [4/5]  eta: 0:00:13  loss: 0.262526 (0.246259)  acc1: 91.796875 (91.520000)  acc5: 99.218750 (99.359999)  time: 13.676867  data: 13.174627  max mem: 1725\n",
+      "Test: Total time: 0:01:08 (13.677570 s / it)\n",
+      "* Acc@1 91.520 Acc@5 99.360 loss 0.246\n",
+      "Accuracy at epoch 0 of the network on the 5 test images: 91.5%\n",
+      "Max accuracy so far: 91.52%\n",
+      "Training of the supervised linear classifier on frozen features completed.\n",
+      "Top-1 test accuracy: 91.5\n",
+      "Finished Training classifier on cw\n",
+      "Skipping for fgsm_06\n",
+      "Skipping for pgd_03\n"
      ]
     }
    ],
@@ -481,64 +502,19 @@
     "attacks = [x for x in loader_dict.keys()]\n",
     "\n",
     "for attack in attacks:\n",
-    "    if attack == \"ori\":\n",
-    "        pstr = \"#\"*30 + f''' evaluating adv_classifier trained on {attack} ''' + \"#\"*30\n",
-    "        print(len(pstr)*\"#\")\n",
-    "        print(pstr)\n",
-    "        print(len(pstr)*\"#\")\n",
-    "        adv_classifier = LinearClassifier(linear_classifier.linear.in_features, \n",
-    "                                 num_labels=len(CLASS_SUBSET))\n",
-    "        adv_classifier.to(DEVICE)\n",
-    "\n",
-    "        # load from checkpoint\n",
-    "        log_dir = Path(LINEAR_CLASSIFIER_MODELS_PATH, attack)\n",
-    "        to_restore={'epoch': 1}\n",
-    "        utils.restart_from_checkpoint(\n",
-    "            Path(log_dir, \"checkpoint.pth.tar\"),\n",
-    "            run_variables=to_restore,\n",
-    "            state_dict=adv_classifier\n",
-    "        )\n",
-    "\n",
-    "        for applied_attack in attacks:\n",
-    "\n",
-    "            print(\">\"*5 + f\" {applied_attack} dataset \")\n",
-    "            logger_dict, logger = validate_network(model, \n",
-    "                                                   adv_classifier, \n",
-    "                                                   loader_dict[applied_attack][\"validation\"], \n",
-    "                                                   criterion=nn.CrossEntropyLoss(),\n",
-    "                                                   tensor_dir=None, \n",
-    "                                                   adversarial_attack=None, \n",
-    "                                                   n=4, \n",
-    "                                                   avgpool_patchtokens=False, \n",
-    "                                                   path_predictions=None)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Evaluate on newly generated attacks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "attacks = [x for x in loader_dict.keys()]\n",
-    "\n",
-    "for attack in attacks:\n",
-    "    \n",
+    "    if attack not in run_attacks:\n",
+    "        print(f'''Skipping for {attack}''')\n",
+    "        continue\n",
+    "        \n",
     "    pstr = \"#\"*30 + f''' evaluating adv_classifier trained on {attack} ''' + \"#\"*30\n",
     "    print(len(pstr)*\"#\")\n",
     "    print(pstr)\n",
     "    print(len(pstr)*\"#\")\n",
-    "    \n",
     "    adv_classifier = LinearClassifier(linear_classifier.linear.in_features, \n",
     "                             num_labels=len(CLASS_SUBSET))\n",
     "    adv_classifier.to(DEVICE)\n",
-    "    \n",
+    "\n",
+    "    # load from checkpoint\n",
     "    log_dir = Path(LINEAR_CLASSIFIER_MODELS_PATH, attack)\n",
     "    to_restore={'epoch': 1}\n",
     "    utils.restart_from_checkpoint(\n",
@@ -546,30 +522,19 @@
     "        run_variables=to_restore,\n",
     "        state_dict=adv_classifier\n",
     "    )\n",
-    "    \n",
-    "    vits = ViTWrapper(model, adv_classifier, transform=None)\n",
     "\n",
     "    for applied_attack in attacks:\n",
-    "        \n",
-    "        if applied_attack == \"pgd\":\n",
-    "            ev_attack = PGD(vits, eps=0.3, alpha=6/255, steps=15)\n",
-    "        elif applied_attack == \"cw\":\n",
-    "            ev_attack = CW(vits, c=10, lr=0.003, steps=30)\n",
-    "        elif applied_attack == \"fgsm\":\n",
-    "            ev_attack = FGSM(vits, eps=0.03)\n",
-    "        else:\n",
-    "            continue\n",
-    " \n",
-    "        print(\">\"*5 + f''' applying attack: {ev_attack} ''')\n",
+    "\n",
+    "        print(\">\"*5 + f\" {applied_attack} dataset \")\n",
     "        logger_dict, logger = validate_network(model, \n",
     "                                               adv_classifier, \n",
-    "                                               loader_dict[\"ori\"][\"validation\"],\n",
+    "                                               loader_dict[applied_attack][\"validation\"], \n",
     "                                               criterion=nn.CrossEntropyLoss(),\n",
     "                                               tensor_dir=None, \n",
-    "                                               adversarial_attack=ev_attack,\n",
+    "                                               adversarial_attack=None, \n",
     "                                               n=4, \n",
     "                                               avgpool_patchtokens=False, \n",
-    "                                               path_predictions=None)"
+    "                                               path_predictions=None)\n"
    ]
   },
   {
@@ -661,6 +626,72 @@
     "            save_file_log = f\"log_post{post_model}_adv{adv_model}_attack{attack}.pt\"\n",
     "            torch.save(logger, str(save_path) + \"/\" + save_file_log)\n",
     "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Extra stuff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate on newly generated attacks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attacks = [x for x in loader_dict.keys()]\n",
+    "\n",
+    "for attack in attacks:\n",
+    "    \n",
+    "    pstr = \"#\"*30 + f''' evaluating adv_classifier trained on {attack} ''' + \"#\"*30\n",
+    "    print(len(pstr)*\"#\")\n",
+    "    print(pstr)\n",
+    "    print(len(pstr)*\"#\")\n",
+    "    \n",
+    "    adv_classifier = LinearClassifier(linear_classifier.linear.in_features, \n",
+    "                             num_labels=len(CLASS_SUBSET))\n",
+    "    adv_classifier.to(DEVICE)\n",
+    "    \n",
+    "    log_dir = Path(LINEAR_CLASSIFIER_MODELS_PATH, attack)\n",
+    "    to_restore={'epoch': 1}\n",
+    "    utils.restart_from_checkpoint(\n",
+    "        Path(log_dir, \"checkpoint.pth.tar\"),\n",
+    "        run_variables=to_restore,\n",
+    "        state_dict=adv_classifier\n",
+    "    )\n",
+    "    \n",
+    "    vits = ViTWrapper(model, adv_classifier, transform=None)\n",
+    "\n",
+    "    for applied_attack in attacks:\n",
+    "        \n",
+    "        if applied_attack == \"pgd\":\n",
+    "            ev_attack = PGD(vits, eps=0.3, alpha=6/255, steps=15)\n",
+    "        elif applied_attack == \"cw\":\n",
+    "            ev_attack = CW(vits, c=10, lr=0.003, steps=30)\n",
+    "        elif applied_attack == \"fgsm\":\n",
+    "            ev_attack = FGSM(vits, eps=0.03)\n",
+    "        else:\n",
+    "            continue\n",
+    " \n",
+    "        print(\">\"*5 + f''' applying attack: {ev_attack} ''')\n",
+    "        logger_dict, logger = validate_network(model, \n",
+    "                                               adv_classifier, \n",
+    "                                               loader_dict[\"ori\"][\"validation\"],\n",
+    "                                               criterion=nn.CrossEntropyLoss(),\n",
+    "                                               tensor_dir=None, \n",
+    "                                               adversarial_attack=ev_attack,\n",
+    "                                               n=4, \n",
+    "                                               avgpool_patchtokens=False, \n",
+    "                                               path_predictions=None)"
    ]
   },
   {
